[tool.poetry]
name = "repl_python3_Price-Alert"
version = "0.1.0"
description = ""
authors = ["Emmanuel <kehindeemmanuel406@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
Flask = "^2.0.2"
termcolor = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
